--- a/PortalConexao/PortalConexao.csproj
+++ b/PortalConexao/PortalConexao.csproj
@@ -172,13 +172,13 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201902052000098_InitialCreate.cs" />
-    <Compile Include="Migrations\201902052000098_InitialCreate.Designer.cs">
-      <DependentUpon>201902052000098_InitialCreate.cs</DependentUpon>
+    <Compile Include="Migrations\201902050044515_InitialCreate.cs" />
+    <Compile Include="Migrations\201902050044515_InitialCreate.Designer.cs">
+      <DependentUpon>201902050044515_InitialCreate.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201902052118467_AtualizaNoticia.cs" />
-    <Compile Include="Migrations\201902052118467_AtualizaNoticia.Designer.cs">
-      <DependentUpon>201902052118467_AtualizaNoticia.cs</DependentUpon>
+    <Compile Include="Migrations\201902061454538_Migracao.cs" />
+    <Compile Include="Migrations\201902061454538_Migracao.Designer.cs">
+      <DependentUpon>201902061454538_Migracao.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Categoria.cs" />
@@ -266,6 +266,7 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
+    <Content Include="Views\Home\NoticiaDetalhe.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -282,11 +283,11 @@
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201902052000098_InitialCreate.resx">
-      <DependentUpon>201902052000098_InitialCreate.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201902050044515_InitialCreate.resx">
+      <DependentUpon>201902050044515_InitialCreate.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201902052118467_AtualizaNoticia.resx">
-      <DependentUpon>201902052118467_AtualizaNoticia.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201902061454538_Migracao.resx">
+      <DependentUpon>201902061454538_Migracao.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
