--- a/PortalConexao/PortalConexao.csproj
+++ b/PortalConexao/PortalConexao.csproj
@@ -167,18 +167,15 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\ApplicationDbContext.cs" />
     <Compile Include="Controllers\BaseController.cs" />
+    <Compile Include="Controllers\CategoriaController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="DAL\DatabaseDB.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201902050044515_InitialCreate.cs" />
-    <Compile Include="Migrations\201902050044515_InitialCreate.Designer.cs">
-      <DependentUpon>201902050044515_InitialCreate.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201902061454538_Migracao.cs" />
-    <Compile Include="Migrations\201902061454538_Migracao.Designer.cs">
-      <DependentUpon>201902061454538_Migracao.cs</DependentUpon>
+    <Compile Include="Migrations\201902201940235_atualizadatabase.cs" />
+    <Compile Include="Migrations\201902201940235_atualizadatabase.Designer.cs">
+      <DependentUpon>201902201940235_atualizadatabase.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Categoria.cs" />
@@ -267,6 +264,11 @@
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\Home\NoticiaDetalhe.cshtml" />
+    <Content Include="Views\Categoria\Politica.cshtml" />
+    <Content Include="Views\Categoria\Esportes.cshtml" />
+    <Content Include="Views\Categoria\InfraEstrutura.cshtml" />
+    <Content Include="Views\Categoria\Entretenimento.cshtml" />
+    <Content Include="Views\Categoria\Saude.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -283,11 +285,8 @@
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201902050044515_InitialCreate.resx">
-      <DependentUpon>201902050044515_InitialCreate.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201902061454538_Migracao.resx">
-      <DependentUpon>201902061454538_Migracao.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201902201940235_atualizadatabase.resx">
+      <DependentUpon>201902201940235_atualizadatabase.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
