--- a/PortalConexao/packages.config
+++ b/PortalConexao/packages.config
@@ -23,6 +23,8 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Migrations" version="1.0.1.0" targetFramework="net452" />
   <package id="Modernizr" version="2.8.3" targetFramework="net452" />
+  <package id="MySql.Data" version="6.10.8" targetFramework="net452" />
+  <package id="MySql.Data.Entity" version="6.10.8" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net452" />
   <package id="popper.js" version="1.14.0" targetFramework="net452" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net452" />
