Adicionando banner na página de Layout, e apontamento da base de produção no config.

--- a/PortalConexao/Web.config
+++ b/PortalConexao/Web.config
@@ -10,7 +10,10 @@
   </configSections>
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=LAPTOP-70KGFJC5;Initial Catalog=ConexaoDb;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-  <add name="devDb" providerName="MySql.Data.MySqlClient" connectionString="server=localhost;port=3306;database=JornalConexaoDb;uid=root;password=0309"/>
+    <add name="devDb" providerName="MySql.Data.MySqlClient" connectionString="server=localhost;port=3306;database=JornalConexaoDb;uid=root;password=0309"/>
+    <!--<add name="JornalDb" providerName="MySql.Data.MySqlClient" connectionString="server=mysql.jornalconexaooeste.com.br;port=3306;database=jornalconexaoo;uid=jornalconexaoo;password=07062015vs"/>-->
+        
+  
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -19,6 +22,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <customErrors mode="Off"/>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
     <httpModules>
