--- a/PortalConexao/PortalConexao.csproj
+++ b/PortalConexao/PortalConexao.csproj
@@ -185,11 +185,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201902201940235_atualizadatabase.cs" />
-    <Compile Include="Migrations\201902201940235_atualizadatabase.Designer.cs">
-      <DependentUpon>201902201940235_atualizadatabase.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\Carousel.cs" />
     <Compile Include="Models\Categoria.cs" />
     <Compile Include="Models\Cidade.cs" />
     <Compile Include="Models\HomeIndexViewModel.cs" />
@@ -233,6 +229,7 @@
     <Content Include="Content\bootstrap-reboot.css.map" />
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
+    <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
@@ -283,6 +280,7 @@
     <Content Include="Views\Categoria\InfraEstrutura.cshtml" />
     <Content Include="Views\Categoria\Entretenimento.cshtml" />
     <Content Include="Views\Categoria\Saude.cshtml" />
+    <Content Include="Views\Home\DetalheCarousel.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -297,11 +295,6 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Migrations\201902201940235_atualizadatabase.resx">
-      <DependentUpon>201902201940235_atualizadatabase.cs</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
